--- a/Python/Pyqt5/client_QWebEngineView/src/gui/windows/main/main.html
+++ b/Python/Pyqt5/client_QWebEngineView/src/gui/windows/main/main.html
@@ -10,16 +10,16 @@
     <header id="top-bar-area"></header>
     <nav id="side-menu-area">
         <ul id="side-menu-list">
-            <li class="side-menu" onclick="sendDataToPython('메뉴1')">메뉴1</li>
-            <li class="side-menu" onclick="sendDataToPython('메뉴2')">메뉴2</li>
-            <li class="side-menu" onclick="sendDataToPython('메뉴3')">메뉴3</li>
-            <li class="side-menu" onclick="sendDataToPython('메뉴4')">메뉴4</li>
+            <li class="side-menu">메뉴1</li>
+            <li class="side-menu">메뉴2</li>
+            <li class="side-menu">메뉴3</li>
+            <li class="side-menu">메뉴4</li>
         </ul>
     </nav>
     <main id="main-area">
         <div>
             <h1>Test Page</h1>
-            <button id="myButton" onclick="sendDataToPython()">Send Data to Python</button>
+            <button id="myButton">Send Data to Python</button>
         </div>
     </main>
 
@@ -28,26 +28,17 @@
 
     <script type="text/javascript" src="../../core/qwebchannel.js"></script>
     <script type="text/javascript">
-        var channel = null;
-        let number = 1;
+
         // QWebChannel을 설정하여 파이썬과 통신
         new QWebChannel(qt.webChannelTransport, function (channelObject) {
             channel = channelObject;
-            window.channelObject = channel.objects.main;
+            window.channelObject = channel.objects['main'];
         });
-    
-        function sendDataToPython(value) {
-            number++;
-            value = value !== undefined ? value : number
 
-            let testValue;
-            window.channelObject.sendData(function(v) {
-                testValue = v;
-                window.channelObject.receiveData(`Hello from JavaScript! ${value} +++ ${testValue}`);
-            });
-
-        }
-
+        const btn = document.getElementById('myButton');
+        btn.addEventListener('click', function() {
+            window.channelObject.receiveData("Text Send");
+        })
 
 
     </script>
